--- a/src/workspace/Workspace.module.css
+++ b/src/workspace/Workspace.module.css
@@ -15,3 +15,41 @@
   flex-grow: 1;
   overflow: scroll;
 }
+
+
+/* .invisibleScrollbar::-webkit-scrollbar-track { */
+/*   /* background: none; */
+/*   /* color: transparent; */
+
+/*   display: none */
+/* } */
+
+/* .invisibleScrollbar::-webkit-scrollbar-track { */
+/**/
+/*   background: bisque; */
+/* } */
+/**/
+
+
+.invisibleScrollbar::-webkit-scrollbar {
+
+  /* background: transparent; */
+  width: 5px;
+  height: 5px;
+  margin: 1em;
+}
+
+
+
+.invisibleScrollbar::-webkit-scrollbar-thumb {
+  /* display: block !important; */
+  background: #202020;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  margin: 1em;
+  display: block;
+}
+
+.invisibleScrollbar::-webkit-scrollbar-corner {
+  display: none;
+}
